# girl

./: Cargo.toml  Justfile  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/bevy_girl/: Cargo.toml  README.md
crates/bevy_girl/src/: lib.rs
crates/girl/: Cargo.toml  README.md
crates/girl/examples/: demo.rs
crates/girl/src/: controllersystem.rs  event.rs  gamepad.rs  gamepadmanager.rs  lib.rs  util.rs
crates/girl/src/gamepad/: input.rs  mod.rs  rumble.rs  sensors.rs  touchpad.rs
src/: lib.rs  main.rs
