[package]
authors.workspace = true
categories.workspace = true
description = "Gamepad Input Rust Library"
edition.workspace = true
homepage.workspace = true
keywords = ["gamepad", "input", "sdl2"]
license.workspace = true
name = "girl"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.1"

[dependencies]
libc = "0.2.174"
sdl2-sys = { version = "0.38.0", features = ["bundled", "static-link"] }
tracing = "0.1.41"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--default-theme=ayu", "--document-private-items", "--generate-link-to-definition", "-Zunstable-options"]
