[package]
authors.workspace = true
categories.workspace = true
description = "Gamepad Input Rust Library"
edition.workspace = true
homepage.workspace = true
keywords = ["gamepad", "input", "sdl2"]
license.workspace = true
name = "girl"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.1"

[dependencies.bitflags]
default-features = false
version = "2.9.2"

[dependencies.tracing]
default-features = false
version = "0.1.41"

[dependencies.sdl2]
default-features = false
features = ["bundled", "static-link"]
version = "0.38.0"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[features]
rumble = []
sensors = ["sdl2/hidapi"]
touchpad = []

[lints]
workspace = true

[[example]]
name = "demo"
required-features = ["sensors", "touchpad", "rumble"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--default-theme=ayu",
    "--generate-link-to-definition",
]
