[package]
authors.workspace = true
categories.workspace = true
description = "Gamepad Input Rust Library"
edition.workspace = true
homepage.workspace = true
keywords = ["gamepad", "input", "sdl2"]
license.workspace = true
name = "girl"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.1"

[dependencies.bitflags]
default-features = false
version = "2.9.2"

## Enable logging with `tracing`.
[dependencies.tracing]
default-features = false
optional = true
version = "0.1.41"

[dependencies.sdl2]
default-features = false
features = ["bundled", "static-link"]
version = "0.38.0"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[dependencies.document-features]
optional = true
version = "0.2.11"

[features]
default = ["sensors", "touchpad", "rumble", "tracing"]
## Enable rumble support.
rumble = []
## Enable sensor (gyroscope, accelerometer) support.
sensors = ["sdl2/hidapi"]
## Enable touchpad support.
touchpad = []
tracing = ["dep:tracing"]

[lints]
workspace = true

[[example]]
name = "demo"
required-features = ["sensors", "touchpad", "rumble"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--default-theme=ayu",
    "--generate-link-to-definition",
    "--cfg docsrs",
]
